<resources>
    <string name="app_name">Kyarlay Merchant</string>
    <string name="login_with_phnumber">Login with phone number</string>
    <string name="enter_register_number">Please enter ph number that you have registered at Kyarlay</string>
    <string name="enter_register_password">Please enter password that you have registered at Kyarlay</string>
    <string name="login">Log in to Shop</string>
    <string name="error_login">Check your phone number and password</string>
    <string name="add_new_product">Add New Product</string>
    <string name="add_new_product_sub_title">Add details information of your product</string>
    <string name="need_help">Need Help?</string>
    <string name="need_help_contact">If you need any help when you upload your product, please contact us.</string>
    <string name="choose_category">Choose Product Category</string>
    <string name="your_category">Watch All Category Product List</string>
    <string name="add">Add Product</string>
    <string name="error_message">Something was wrong, Please try again.</string>
    <string name="loading_wait">Loading...Please Wait!</string>
    <string name="product_create_success">New product is created successfully.</string>
    <string name="product_edit_success">New product is edited successfully.</string>
    <string name="product_name_waring">Please enter your product name</string>
    <string name="product_price_waring">Please enter your product price</string>
    <string name="product_description_waring">Please enter your product description</string>
    <string name="product_commission_price_warning">This is the amount of product price you will get from Kyarlay.</string>
    <string name="search_product">To search product</string>
    <string name="no_product_add_product">No product to display.\nAdd new products to sell.</string>
    <string name="add_product">Add new product</string>
    <string name="noitem">There is no item to display.</string>
    <string name="currency">Kyats</string>
    <string name="change_language">Language</string>
    <string name="logout">Log Out</string>
    <string name="profile">Profile</string>
    <string name="logout_confirm_title">Are you sure to log out?</string>
    <string name="confirm">Confrim</string>
    <string name="cancel">Cancel</string>
    <string name="setting_myanmar">မြန်မာ</string>
    <string name="setting_english">English</string>
    <string name="edit_product">Edit Your Product</string>
    <string name="change_password">Chanage Password</string>
    <string name="verification_code">One Time Password</string>
    <string name="enter_verify_code">Please type one time password code\n sent to your phone</string>
    <string name="click_otp">Click here to get Otp Code</string>
    <string name="submit">Submit</string>
    <string name="otp_code">Please fill all verification codes</string>
    <string name="otp_error">Kyarlay One Time Password Code Error</string>
    <string name="otp_time">Please wait a moment!\nTry again!</string>
    <string name="otp_waiting_time">Please wait %s seconds and try again!</string>
    <string name="check_number">Please check phone number and try again!</string>
    <string name="password_check_again">Please check your new password again!</string>
    <string name="change_password_successful">Changed password successfully!</string>
    <string name="enter_new_password">Enter Your New Password</string>
    <string name="sure">Are you sure?</string>
    <string name="cancel_delete">Cancel</string>
    <string name="confirm_delete">Delete</string>

    <string name="deleted_status">Product is deleted successfully!</string>
    <string name="edit">Edit</string>
    <string name="changed_status">Product status is changed successfully!</string>
</resources>