<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:background="@color/background"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_margin="@dimen/dp_16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <ImageView
            android:layout_marginTop="30dp"
            android:layout_width="44dp"
            android:layout_height="22dp"
            android:src="@drawable/kyarlaybanner"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_margin_reading_post"
            android:orientation="horizontal">
            <TextView
                android:text="Log In"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="@dimen/text_16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <ImageView
                android:layout_marginLeft="@dimen/layout_margin_reading_post"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:src="@drawable/login"/>


        </LinearLayout>

        <TextView
            android:layout_marginTop="@dimen/layout_margin_reading_post"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_with_phnumber"
            android:textColor="@color/text"
            />

        <TextView
            android:id="@+id/txtTitlePhNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="Phone number"
            android:textColor="@color/text"
            android:layout_marginLeft="8dp"/>

        <LinearLayout
            android:id="@+id/layoutPhoneNumber"
            android:layout_marginTop="@dimen/layout_margin_reading_post"
            android:background="@drawable/background_blue_corner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/layout_margin_reading_post"
            android:paddingRight="@dimen/layout_margin_reading_post"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:src="@drawable/smartphone" />

            <EditText
                android:id="@+id/edPhoneNumber"
                android:hint="Eg: 0955555555"
                android:textColor="@color/text"
                android:textColorHint="@color/text_gray"
                android:layout_gravity="center"
                android:inputType="number"
                android:background="@null"
                android:layout_weight="1"
                android:textSize="@dimen/text_16"
                android:layout_marginLeft="@dimen/layout_margin_reading_post"
                android:layout_width="wrap_content"
                android:layout_marginRight="@dimen/dp_8"
                android:layout_height="50dp" />

        </LinearLayout>
        <TextView
            android:id="@+id/txtPhNoReminder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/enter_register_number"
            android:textSize="@dimen/text_13"
            android:textColor="@color/text_gray"
            android:layout_marginLeft="8dp"/>


        <TextView
            android:id="@+id/txtTitlePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="Password"
            android:textColor="@color/text"
            android:layout_marginLeft="8dp"/>

        <LinearLayout
            android:id="@+id/layoutPassword"
            android:layout_marginTop="@dimen/layout_margin_reading_post"
            android:background="@drawable/background_blue_corner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/layout_margin_reading_post"
            android:paddingRight="@dimen/layout_margin_reading_post"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:src="@drawable/padlock" />

            <EditText
                android:id="@+id/edPassword"
                android:hint="Eg: xxxxxxx"
                android:textColor="@color/text"
                android:textColorHint="@color/text_gray"
                android:layout_gravity="center"
                android:inputType="textPassword"
                android:background="@null"
                android:layout_weight="1"
                android:textSize="@dimen/text_16"
                android:layout_marginLeft="@dimen/layout_margin_reading_post"
                android:layout_marginRight="@dimen/layout_margin_reading_post"
                android:layout_width="wrap_content"
                android:layout_height="50dp" />

            <ImageView
                android:id="@+id/imgPasswordInvisible"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:src="@drawable/password_invisible" />

        </LinearLayout>
        <TextView
            android:id="@+id/txtPasswordReminder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/enter_register_password"
            android:textSize="@dimen/text_13"
            android:textColor="@color/text_gray"
            android:layout_marginRight="@dimen/dp_8"
            android:layout_marginLeft="8dp"/>


        <TextView
            android:id="@+id/txtLogin"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:text="@string/login"
            android:textSize="@dimen/text_16"
            android:textColor="@color/white"
            android:background="@drawable/background_blue_solid"

           />
    </LinearLayout>

</ScrollView>